1. Changed close button position in modal 2. Fixed collapsed images in project modal while content overflows
2. Fixed bad wrapped project modal heading in adaptive
3. Fixed close modal button > 1824px w

--- a/src/components/Index/IndexCutaway/IndexCutaway.scss
+++ b/src/components/Index/IndexCutaway/IndexCutaway.scss
@@ -109,7 +109,7 @@
   }
   &__scroll {
     position: absolute;
-    bottom: -45px;
+    bottom: 0;
     cursor: pointer;
     .mouse {
       width: 30px;
