--- a/src/components/Index/IndexEducation/EducationCircles/EducationCircles.scss
+++ b/src/components/Index/IndexEducation/EducationCircles/EducationCircles.scss
@@ -12,6 +12,7 @@
     font-weight: 400;
     font-size: .9rem;
     letter-spacing: -.5px;
+    text-align: center;
   }
 
   svg text{
